# term-survivors

./: .cursorignore  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  aqua-checksums.json  aqua.yaml  renovate.json
.claude/: settings.json
.claude/skills/simulate/: SKILL.md
.claude/skills/version-up/: SKILL.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: codeql.yml  publish.yml  test.yml
docs/: DEVELOPMENT.md
npm/@term-survivors/darwin-arm64/: package.json
npm/@term-survivors/darwin-x64/: package.json
npm/@term-survivors/linux-arm64/: package.json
npm/@term-survivors/linux-x64/: package.json
npm/@term-survivors/win32-x64/: package.json
npm/term-survivors/: index.js  package.json
scripts/: bump-version.sh  check-version-sync.sh
src/: audio.rs  logger.rs  main.rs  save.rs  ui.rs
src/config/: display.rs  enemy.rs  game.rs  mod.rs  player.rs  weapon.rs
src/entities/: enemy.rs  mod.rs  player.rs  projectile.rs  weapon.rs
src/systems/: combat.rs  levelup.rs  mod.rs  session.rs  simulate.rs  state.rs  update.rs
src/ui/: mod.rs  theme.rs
