[package]
name = "term-survivors"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
description = "A Vampire Survivors-like roguelike shooter that runs in the terminal"
authors = ["kimulaco"]
keywords = ["game", "roguelike", "terminal", "tui", "survivors"]
categories = ["games", "command-line-utilities"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kimulaco/term-survivors"
include = ["src/**", "README.md", "LICENSE"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
dirs = "5"
