[package]
name = "term-survivors"
version = "0.4.1"
edition = "2021"
rust-version = "1.74"
description = "A Vampire Survivors-like roguelike shooter that runs in the terminal"
authors = ["kimulaco"]
keywords = ["game", "roguelike", "terminal", "tui", "survivors"]
categories = ["games", "command-line-utilities"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kimulaco/term-survivors"
include = ["src/**", "!src/systems/simulate.rs", "README.md", "LICENSE"]

[features]
# Developer-only: not included in distributed builds
simulate = []

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.10"
dirs = "6"
